--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "chai": "1.8.x"
     },
     "scripts": {
+        "start": "node server.js",
         "test": "node_modules/mocha/bin/mocha"
     },
 	"engines": {
